namespace DefaultNamespace
{
    public class PangConstants
    {
        public const float MoveSpeed = 5f;
        public const int ScoreCoefficient = 10;
        
        public const string GoLeftTrigger = "RunLeft";
        public const string GoRightTrigger = "RunRight";
        public const string ShootTrigger = "Shoot";
        public const string IdleTrigger = "Idle";
    }
}